[package]
name = "retain_more"
version = "0.1.0"
authors = ["Daniel McNab <36049421+DJMcNab@users.noreply.github.com>"]
edition = "2018"
description = ""
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/DJMcNab/retain_more"
readme = "README.md"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
